--- a/src/index.html
+++ b/src/index.html
@@ -143,10 +143,10 @@
         <br />
         <button class="next">Next</button>
       </div>
-      <br />
+      <br>
 
       <!-- Submit Button -->
-      <button type="submit">Generate README</button>
+      <button type="submit" class="hidden">Generate README</button>
     </form>
     <br />
     <script src="./renderer.js"></script>
